<resources>

    <string name="message_disconnected">Disconnected</string>
    <string name="message_connecting_error">Connecting Error</string>
    <string name="message_no_operators">No operators</string>
    <string name="message_feedback_sent">Thanks, your feedback has been submitted!</string>
    <string name="message_offline_form_sent">Thanks, your Offline Form has been submitted!</string>

    <string name="loading_title">Загрузка&#8230;</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="shows_postfix">просмотров</string>
    <string name="search">Поиск</string>
    <string name="chat_with_support">Написать в поддержку</string>

    <string name="error">Error</string>
    <string name="no_operators">No operators</string>
    <string name="loading">Loading&#8230;</string>
    <string name="message">Message</string>
    <string name="no_connections">No internet connection</string>
    <string name="long_message">Your message is too long for sending (more than 10 000 symbols)</string>
    <string name="info">Информация</string>
    <string name="support">Support</string>
    <string name="account_id">Enter Account ID</string>

    <string name="attachment_dialog_photo">Picture</string>
    <string name="attachment_dialog_camera">Camera</string>
    <string name="attachment_dialog_document">Document</string>
    <string name="attachment_selected">With attachment</string>

    <string name="offline_form_dialog_title">Offline Form</string>
    <string name="offline_form_company_id_hint">Enter company ID</string>
    <string name="offline_form_email_hint">Enter email</string>
    <string name="offline_form_name_hint">Enter name</string>
    <string name="offline_form_message_hint">Enter message</string>


    <string name="tools_large_text">Before hitting send on a text, delivering a proposal to a client, or taking the stage at an industry conference, run your actions by the R-Factor Test.</string>
    <string name="tools_operator_name_text">Оператор\nОператорович</string>
    <string name="tools_little_text">abc</string>

</resources>