<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="?attr/usedesk_dialog_offlineform"
    tools:theme="@style/Usedesk.Dialog.OfflineForm">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_company_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/usedesk_content_marginStart"
            android:layout_marginTop="?attr/usedesk_content_marginTop"
            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
            android:hint="@string/offline_form_company_id_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/usedesk_content_marginStart"
            android:layout_marginTop="?attr/usedesk_content_marginTop"
            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
            android:hint="@string/offline_form_email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/usedesk_content_marginStart"
            android:layout_marginTop="?attr/usedesk_content_marginTop"
            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
            android:hint="@string/offline_form_name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/usedesk_content_marginStart"
            android:layout_marginTop="?attr/usedesk_content_marginTop"
            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
            android:hint="@string/offline_form_message_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>