<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher android:id="@+id/content_view_switcher"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/message_layout" />

        <RelativeLayout
            android:id="@id/message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/listPreferredItemHeight"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/input_message_background">

            <TextView
                android:id="@+id/attachment_marker_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attachment_selected"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageButton
                style="@style/ChatButtonStyle"
                android:id="@+id/attach_file_image_view"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_attach_file_black" />

            <EditText
                android:id="@+id/message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@+id/send_image_view"
                android:layout_toRightOf="@id/attach_file_image_view"
                android:hint="@string/message"
                android:maxLines="5" />

            <ImageButton
                style="@style/ChatButtonStyle"
                android:id="@+id/send_image_view"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_send_black" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/loading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading"/>

</ViewSwitcher>