<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="?attr/usedesk_fragment_chat"
    tools:theme="@style/Usedesk.Fragment.Chat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/usedesk_item_message_user_text" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/offline_form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/offline_form_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/offline_form_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="?attr/usedesk_content_marginStart"
                                android:layout_marginTop="?attr/usedesk_content_marginTop"
                                android:layout_marginEnd="?attr/usedesk_content_marginEnd"
                                android:layout_marginBottom="?attr/usedesk_content_marginBottom"
                                android:hint="@string/offline_form_name_hint"
                                android:inputType="textPersonName|textCapWords" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/offline_form_email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/usedesk_content_marginStart"
                            android:layout_marginTop="?attr/usedesk_content_marginTop"
                            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
                            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
                            android:hint="@string/offline_form_email_hint"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/offline_form_message_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/usedesk_content_marginStart"
                            android:layout_marginTop="?attr/usedesk_content_marginTop"
                            android:layout_marginEnd="?attr/usedesk_content_marginEnd"
                            android:layout_marginBottom="?attr/usedesk_content_marginBottom"
                            android:hint="@string/offline_form_message_hint"
                            android:inputType="textMultiLine|textCapSentences"
                            android:maxLines="5"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/offline_form_send_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/send"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/message_edit_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/message_edit_text"
                        tools:visibility="visible" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/message_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="true"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_attached_files"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toTopOf="@+id/message_edit_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/usedesk_item_chat_attached_file" />

                    <ImageButton
                        android:id="@+id/attach_file_image_view"
                        style="?attr/usedesk_fragment_chat_attachment_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="@+id/message_edit_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_attached_files" />

                    <EditText
                        android:id="@+id/message_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:hint="@string/message"
                        android:inputType="textMultiLine|textCapSentences"
                        android:maxLength="10000"
                        android:maxLines="5"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/send_image_view"
                        app:layout_constraintStart_toEndOf="@+id/attach_file_image_view" />

                    <ImageButton
                        android:id="@+id/send_image_view"
                        style="?attr/usedesk_fragment_chat_send_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="@+id/message_edit_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/message_edit_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading" />
</ViewSwitcher>